# test_django_app

./: README.md  db.sqlite3  pyproject.toml
myapp/: settings.py
